--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=screenmatch
+
+spring.datasource.url=jdbc:postgresql://localhost/alura_series
+spring.datasource.username=postgres
+spring.datasource.password=091513
+spring.datasource.drive-class-name=org.postgresql.Driver
+hibernate.dialect=org.hibernate.dialect.HSQLDialect
+
