--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,13 @@
             <scope>runtime</scope>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-devtools</artifactId>
+            <scope>runtima</scope>
+            <optional>true</optional>
+        </dependency>
+
 	</dependencies>
 
 	<build>
